--- a/public/style.css
+++ b/public/style.css
@@ -4,42 +4,106 @@
   box-sizing: border-box;
 }
 
+html,
 body {
+  height: 100%;
+  width: 100%;
   font: 13px Helvetica, Arial;
 }
 
+.container {
+  position: relative;
+  width: 80%;
+  height: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  outline: solid black 2px;
+  overflow: auto;
+}
+
 form {
-  background: #000;
-  padding: 3px;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
 }
 
 form input {
-  border: 0;
-  padding: 10px;
-  width: 90%;
-  margin-right: 0.5%;
+  outline: none;
+  position: fixed;
+  bottom: 0;
+  padding: 15px;
+  width: 71%;
+  height: 9.7%;
+  right: 14%;
 }
 
 form button {
+  position: fixed;
+  float: right;
+  bottom: 0;
+  right: 5%;
+
   width: 9%;
+  height: 9.7%;
+  outline: none;
   background: rgb(130, 224, 255);
-  border: none;
-  padding: 10px;
+  /* border: none; */
+}
+
+#users {
+  position: relative;
+  list-style: none;
+  float: left;
+  width: 10%;
+  margin-left: 0.5%;
 }
 
 #messages {
-  list-style-type: none;
+  width: 100%;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
 
 #messages li {
-  padding: 5px 10px;
+  width: 100%;
+  display: inline-block;
+  clear: both;
+  padding: 20px;
+  border-radius: 30px;
+  margin-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  word-wrap: break-word;
 }
 
-#messages li:nth-child(odd) {
+.other {
+  max-width: 60%;
   background: #eee;
+  float: left;
+}
+
+.own {
+  max-width: 60%;
+  float: right;
+  background: #0084ff;
+  color: #fff;
+}
+
+.other + .own,
+.own {
+  border-bottom-right-radius: 5px !important;
+}
+
+.own + .other,
+.other {
+  border-bottom-left-radius: 5px !important;
+}
+
+.own + .own {
+  border-top-right-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
+}
+
+.own :last-of-type {
+  border-bottom-right-radius: 30px !important;
 }
